--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -1,26 +1,29 @@
-<div class="col-md-4">
-    <div class="thumbnail">
-      <img src="http://tech.firstpost.com/wp-content/uploads/2014/09/Apple_iPhone6_Reuters.jpg" alt="" class="img-responsive">
-      <div class="caption">
-        <h4 class="pull-right">$700.99</h4>
-        <h4><a href="#">Mobile Product</a></h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+<form action="/" method="POST">
+    <div class="col-md-4">
+        <div class="thumbnail">
+          <img src="http://tech.firstpost.com/wp-content/uploads/2014/09/Apple_iPhone6_Reuters.jpg" alt="" class="img-responsive">
+          <div class="caption">
+            <h4 class="pull-right"><%=goodsPrice%> บาท</h4>
+            <h4><a href="#"><%=goodsName%></a></h4>
+            <p><%=goodsDesc%>></p>
+          </div>
+          <div class="ratings">
+            <p>
+              <span class="glyphicon glyphicon-star"></span>
+              <span class="glyphicon glyphicon-star"></span>
+              <span class="glyphicon glyphicon-star"></span>
+              <span class="glyphicon glyphicon-star"></span>
+              <span class="glyphicon glyphicon-star"></span>
+               (<%=goodsReview%> reviews)
+            </p>
+          </div>
+          <div class="space-ten"></div>
+          <div class="btn-ground text-center">
+              <button type="submit" class="btn btn-primary" name="Selecteditem" value="<%=goodsName%>"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i> Quick View</button>
+          </div>
+          <div class="space-ten"></div>
+        </div>
       </div>
-      <div class="ratings">
-        <p>
-          <span class="glyphicon glyphicon-star"></span>
-          <span class="glyphicon glyphicon-star"></span>
-          <span class="glyphicon glyphicon-star"></span>
-          <span class="glyphicon glyphicon-star"></span>
-          <span class="glyphicon glyphicon-star"></span>
-           (15 reviews)
-        </p>
-      </div>
-      <div class="space-ten"></div>
-      <div class="btn-ground text-center">
-          <button type="button" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i> Quick View</button>
-      </div>
-      <div class="space-ten"></div>
-    </div>
-  </div>
+</form>
+
