--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -1,7 +1,7 @@
 <form action="/" method="POST">
     <div class="col-md-4">
         <div class="thumbnail">
-          <img src="http://tech.firstpost.com/wp-content/uploads/2014/09/Apple_iPhone6_Reuters.jpg" alt="" class="img-responsive">
+          <img src="http://placehold.it/200x200" alt="" class="img-responsive">
           <div class="caption">
             <h4 class="pull-right"><%=goodsPrice%> บาท</h4>
             <h4><a href="#"><%=goodsName%></a></h4>
@@ -19,7 +19,7 @@
           </div>
           <div class="space-ten"></div>
           <div class="btn-ground text-center">
-              <button type="submit" class="btn btn-primary" name="Selecteditem" value="<%=goodsName%>"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+              <button type="submit" class="btn btn-primary" name="selectedItem" value="<%=goodsName%>"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#product_view"><i class="fa fa-search"></i> Quick View</button>
           </div>
           <div class="space-ten"></div>
