--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,90 +1,84 @@
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="icon" href="../../favicon.ico">
-        <link rel="canonical" href="https://getbootstrap.com/docs/3.3/examples/navbar-fixed-top/">
-    
-        <title>E-Commerce Demo Site</title>
-    
-        <!-- Bootstrap core CSS -->
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        
-        <!-- Custom styles for this template -->
-        <style>
-            body {
-                min-height: 2000px;
-                padding-top: 70px;
-            }
-        </style>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link rel="icon" href="../../favicon.ico" />
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/3.3/examples/navbar-fixed-top/"
+    />
 
-      </head>
-    
-      <body>
-        <form action="/cart" method="POST">
-                    <!-- Fixed navbar -->
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container">
-              <!-- <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Project name</a>
-              </div> -->
-              <!-- <ul class="nav navbar-nav navbar-right"> -->
-  
-              <!-- <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#about">About</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li role="separator" class="divider"></li>
-                      <li class="dropdown-header">Nav header</li>
-                      <li><a href="#">Separated link</a></li>
-                      <li><a href="#">One more separated link</a></li>
-                    </ul>
-                  </li>
-                </ul>
-  
-                <ul class="nav navbar-nav navbar-right">
-                  <li ><a href="./">Cart <span class="sr-only"></span></a></li>
-                </ul>
-  
-              </div> -->
-              <!--/.nav-collapse -->
-  
-  
-              <ul class="nav navbar-nav navbar-right">
-                  <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
-                  <li ><a href="./cart">Cart <span class="sr-only"></span></a></li>
-              </ul>
-            </div>
-          </nav>
-        </form>
+    <title>E-Commerce Demo Site</title>
 
-    
-    
-    
-        <!-- Bootstrap core JavaScript
+    <!-- Bootstrap core CSS -->
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+
+    <!-- Custom styles for this template -->
+    <style>
+      body {
+        min-height: 2000px;
+        padding-top: 200px;
+      }
+    </style>
+    <!-- Bootstrap core JavaScript
         ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+    <link
+      href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <form action="/cart" method="POST">
+      <!-- Fixed navbar -->
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <ul class="nav navbar-nav navbar-left">
+            <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
+            <li class="col">
+              <a href="/"> Home<span class="sr-only"></span></a>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
+
+            <li class="col">
+              <a href="./money"
+                ><%=wallet[0].money%> บาท <span class="sr-only"></span
+              ></a>
+            </li>
+            <li class="col">
+              <a href="./money"
+                ><%=wallet[0].point%> point <span class="sr-only"></span
+              ></a>
+            </li>
+            <li class="col">
+              <a href="./cart"
+                >Cart ( <%=wallet[0].total%> บาท ) <span class="sr-only"></span
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </form>
+  </body>
+</html>
