--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -1,7 +1,7 @@
 <form action="/" method="POST">
     <div class="col-md-4">
         <div class="thumbnail">
-          <img src="http://placehold.it/200x200" alt="" class="img-responsive">
+          <img src="<%=goodsImage%>" alt="" class="img-responsive">
           <div class="caption">
             <h4 class="pull-right"><%=goodsPrice%> บาท</h4>
             <h4><a href="#"><%=goodsName%></a></h4>
