--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,48 @@
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
 </body>
+<footer>
+    <div id="bsr-page-footer">
+        <div class="row">
+          <!-- brand bar -->
+          <div class="col-sm-6 text-left">
+            <img id="bsr-brand-image" src="images/icon.png" alt="brand icon" width="35" height="35"> <a href="/">  Paul Demo</a>
+          </div>
+          <!-- social icons -->
+          <div class="col-sm-6 text-right">
+            <ul class="bsr-social-icons">
+              <li><a href="#"><i class="fa fa-fw fa-lg fa-github-alt" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-fw fa-lg fa-linkedin" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-fw fa-lg fa-instagram" aria-hidden="true"></i></a></li>
+              <li><a href="#"><i class="fa fa-fw fa-lg fa-facebook-official" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+      
+        <div class="row">
+          <!-- copyright bar -->
+          <div class="col-sm-6">
+            <p><small>Copyright © 2023 Paulo</small></p>
+          </div>
+          <!-- ancillary links bar -->
+          <div class="col-sm-6">
+            <ul class="bsr-footer-ancillary-links text-right">
+              <li><a href="/">Home</a></li>
+              <li><a href="/user">User</a></li>
+              <li><a href="/money">Money</a></li>
+              <li><a href="/cart">Cart</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    
+        <!-- Favicons -->
+    <script
+        src="https://kit.fontawesome.com/147e879dd5.js"
+        crossorigin="anonymous"
+    ></script>
+</footer>
 </html>
