--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -5,7 +5,7 @@
           <div class="caption">
             <h4 class="pull-right"><%=goodsPrice%> บาท</h4>
             <h4><a href="#"><%=goodsName%></a></h4>
-            <p><%=goodsDesc%>></p>
+            <p><%=goodsDesc%></p>
           </div>
           <div class="ratings">
             <p>
