add sponsor system

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
         <div class="row">
           <!-- brand bar -->
           <div class="col-sm-6 text-left">
-            <img id="bsr-brand-image" src="images/icon.png" alt="brand icon" width="35" height="35"> <a href="/">  Paul Demo</a>
+            <img id="bsr-brand-image" src="/images/icon.png" alt="brand icon" width="35" height="35"> <a href="/">  Paul Demo</a>
           </div>
           <!-- social icons -->
           <div class="col-sm-6 text-right">
