--- a/views/register.ejs
+++ b/views/register.ejs
@@ -118,7 +118,7 @@
         <i class="fa-solid fa-user fa-8x"></i>
         <p></p>
 
-        <h1 class="h3 mb-3 fw-bold">Register</h1>
+        <h1 class="h3 mb-3 fw-bold">Register*</h1>
 
         <div class="form-floating">
           <input
@@ -130,7 +130,7 @@
             required
             autofocus
           />
-          <label for="floatingPassword">First Name</label>
+          <label for="floatingPassword">First Name*</label>
         </div>
         <div class="form-floating">
           <input
@@ -141,7 +141,7 @@
             placeholder="Last Name"
             required
           />
-          <label for="floatingPassword">Last Name</label>
+          <label for="floatingPassword">Last Name*</label>
         </div>
         <div class="form-floating">
           <input
@@ -152,7 +152,7 @@
             placeholder="Email Address"
             required
           />
-          <label for="floatingInput">Email address</label>
+          <label for="floatingInput">Email address*</label>
         </div>
         <div class="form-floating">
             <input
@@ -163,8 +163,20 @@
               placeholder="Password"
               required
             />
-            <label for="floatingInput">Password</label>
+            <label for="floatingInput">Password*</label>
           </div>
+          <p></p>
+          <div class="form-floating">
+            <input
+              type="sponsor"
+              name="sponsor"
+              class="form-control"
+              id="floatingInput"
+              placeholder="Sponsor"
+            />
+            <label for="floatingInput">Sponsor</label>
+          </div>
+          <p></p>
         <button class="w-100 btn btn-lg btn-primary" type="submit">
           Register
         </button>
