--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,80 +1,70 @@
-
 <%-include("partials/header.ejs")-%>
 
-    <div class="row" style="text-align: center;">
-        <div class="col-md-12">
-            <i class="fa-solid fa-user fa-8x" style="color: red;"></i>
-            <p></p>
-            <h1><%=userName%></h1></div>
-        
-    </div>
+<div class="row" style="text-align: center">
+  <div class="col-md-12">
+    <a href="/user/<%=userName._id%>/sponsor">
+      <i class="fa-solid fa-user fa-8x" style="color: red"></i>
+      <p></p>
+      <h1><%=userName.firstName%></h1>
+    </a>
+  </div>
+</div>
 
-    <div class="row" style="text-align: center;">
-        <%if(lowerUser1._id){%>
-            <div class="col-xs-6">
-                <a href="/<%=lowerUser1._id%>">
-                    <i class="fa-solid fa-user fa-6x"></i>
-                    <p></p>
-                    <h1><%=lowerUser1.firstName%></h1>
-                </a>
-            </div>    
-        <%}%>
-        <%if(lowerUser2._id){%>
-            <div class="col-xs-6">
-                <a href="/<%=lowerUser2._id%>">
-                    <i class="fa-solid fa-user fa-6x"></i>
-                    <p></p>
-                    <h1><%=lowerUser2.firstName%></h1>
-                </a>
-            </div>
-        <%}%>
-    </div>
+<div class="row" style="text-align: center">
+  <%if(lowerUser1._id){%>
+  <div class="col-xs-6">
+    <a href="/user/<%=lowerUser1._id%>">
+      <i class="fa-solid fa-user fa-6x"></i>
+      <p></p>
+      <h1><%=lowerUser1.firstName%></h1>
+    </a>
+  </div>
+  <%}%> <%if(lowerUser2._id){%>
+  <div class="col-xs-6">
+    <a href="/user/<%=lowerUser2._id%>">
+      <i class="fa-solid fa-user fa-6x"></i>
+      <p></p>
+      <h1><%=lowerUser2.firstName%></h1>
+    </a>
+  </div>
+  <%}%>
+</div>
 
-    <div class="row" style="text-align: center;">
-        
-        <%if(lowerUser1.children.length){%>
-            <%if(lowerUser1.children[0]){%>
-                <div class="col-xs-3">
-                    <a href="/<%=lowerUser1.children[0]._id%>">
-                        <i class="fa-solid fa-user fa-4x" style="color: darkgreen;"></i>
-                        <p></p>
-                        <h1><%=lowerUser1.children[0].firstName%></h1>
-                    </a>
-                </div>
-            <%}%>
-
-            <%if(lowerUser1.children[1]){%>
-                <div class="col-xs-3">
-                    <a href="/<%=lowerUser1.children[1]._id%>">
-                        <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
-                        <p></p>
-                        <h1><%=lowerUser1.children[1].firstName%></h1>
-                    </a>
-                </div>
-            <%}%>
-        <%}%>
-
-        <%if(lowerUser2.children.length){%>
-            <%if(lowerUser2.children[0]){%>
-                <div class="col-xs-3">
-                    <a href="/<%=lowerUser2.children[0]._id%>">
-                        <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
-                        <p></p>
-                        <h1><%=lowerUser2.children[0].firstName%></h1>
-                    </a>
-                </div>
-            <%}%>
-
-            <%if(lowerUser2.children[1]){%>
-                <div class="col-xs-3">
-                    <a href="/<%=lowerUser2.children[1]._id%>">
-                        <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
-                        <p></p>
-                        <h1><%=lowerUser2.children[1].firstName%></h1>
-                    </a>
-                </div>
-            <%}%>
-        <%}%>
-    </div>    
+<div class="row" style="text-align: center">
+  <%if(lowerUser1.children.length){%> <%if(lowerUser1.children[0]){%>
+  <div class="col-xs-3">
+    <a href="/user/<%=lowerUser1.children[0]._id%>">
+      <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
+      <p></p>
+      <h1><%=lowerUser1.children[0].firstName%></h1>
+    </a>
+  </div>
+  <%}%> <%if(lowerUser1.children[1]){%>
+  <div class="col-xs-3">
+    <a href="/user/<%=lowerUser1.children[1]._id%>">
+      <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
+      <p></p>
+      <h1><%=lowerUser1.children[1].firstName%></h1>
+    </a>
+  </div>
+  <%}%> <%}%> <%if(lowerUser2.children.length){%>
+  <%if(lowerUser2.children[0]){%>
+  <div class="col-xs-3">
+    <a href="/user/<%=lowerUser2.children[0]._id%>">
+      <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
+      <p></p>
+      <h1><%=lowerUser2.children[0].firstName%></h1>
+    </a>
+  </div>
+  <%}%> <%if(lowerUser2.children[1]){%>
+  <div class="col-xs-3">
+    <a href="/user/<%=lowerUser2.children[1]._id%>">
+      <i class="fa-solid fa-user fa-4x" style="color: darkgreen"></i>
+      <p></p>
+      <h1><%=lowerUser2.children[1].firstName%></h1>
+    </a>
+  </div>
+  <%}%> <%}%>
+</div>
 
 <%-include("partials/footer.ejs")-%>
