--- a/views/sponsor.ejs
+++ b/views/sponsor.ejs
@@ -2,7 +2,7 @@
 
 <div class="row" style="text-align: center">
   <div class="col-md-12">
-    <a href="../">
+    <a href="./">
       <i class="fa-solid fa-user fa-8x" style="color: red"></i>
       <p></p>
       <h1><%=userName.firstName%></h1>
