simplify current code

--- a/views/money.ejs
+++ b/views/money.ejs
@@ -6,7 +6,7 @@
       
       
 
-    <p><hr style=""><a class="btn btn-lg btn-success" href="/money/add" role="button">Add Money(+100b)</a></p>
+    <p><a class="btn btn-lg btn-success" href="/money/add" role="button">Add Money(+100b)</a></p>
     <p><a class="btn btn-lg btn-success" href="/money/transfer" role="button">Use Point(100p -> 20b)</a></p>
     <p><a class="btn btn-lg btn-success" href="/" role="button">Go Back</a></p>
 
