--- a/views/login.ejs
+++ b/views/login.ejs
@@ -125,11 +125,11 @@
               name="username"
               class="form-control top"
               id="floatingInput"
-              placeholder="Email Address"
+              placeholder="Username"
               required
               autofocus
             />
-            <label for="floatingInput">Email address</label>
+            <label for="floatingInput">Username</label>
           </div>
           <div class="form-floating">
               <input
