--- a/views/sponsor.ejs
+++ b/views/sponsor.ejs
@@ -5,7 +5,7 @@
     <a href="./">
       <i class="fa-solid fa-user fa-8x" style="color: red"></i>
       <p></p>
-      <h1><%=userName.firstName%></h1>
+      <h1><%=userName.username%></h1>
     </a>
 
   </div>
@@ -17,7 +17,7 @@
     <a href="/user/<%=element._id%>">
       <i class="fa-solid fa-user fa-4x" style="color: darkorange"></i>
       <p></p>
-      <h1><%=element.firstName%></h1>
+      <h1><%=element.username%></h1>
     </a>
   </div>
 
