--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,15 @@
 
 </body>
-<footer>
-    <div id="bsr-page-footer">
-        <div class="row">
+<footer class="navbar-default navbar-fixed-bottom">
+    <div class="footer-bottom" id="bsr-page-footer">
+        
+      <div class="row">
           <!-- brand bar -->
-          <div class="col-sm-6 text-left">
+          <div class="col-xs-6 text-left">
             <img id="bsr-brand-image" src="/images/icon.png" alt="brand icon" width="35" height="35"> <a href="/">  Paul Demo</a>
           </div>
           <!-- social icons -->
-          <div class="col-sm-6 text-right">
+          <div class="col-xs-6 text-right">
             <ul class="bsr-social-icons">
               <li><a href="#"><i class="fa fa-fw fa-lg fa-github-alt" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-fw fa-lg fa-linkedin" aria-hidden="true"></i></a></li>
@@ -21,11 +22,11 @@
       
         <div class="row">
           <!-- copyright bar -->
-          <div class="col-sm-6">
+          <div class="col-xs-6">
             <p><small>Copyright © 2023 Paulo</small></p>
           </div>
           <!-- ancillary links bar -->
-          <div class="col-sm-6">
+          <div class="col-xs-6">
             <ul class="bsr-footer-ancillary-links text-right">
               <li><a href="/">Home</a></li>
               <li><a href="/user">User</a></li>
